flapivor/tests/m3/hopix/typechecker/good/13-mutually-rec-fun-definitions.hopix
def double_omega : Int -> Int (x) =
    omega (x)
and omega : Int -> Int (x) =
    double_omega (x)

val main : Int = double_omega (73)