flapivor/tests/m3/hopix/typechecker/bad/24-invalid-function-call-10.hopix
def g : Int -> Int (x) = f(x)
and f : String -> Int (x) = g(x)